log/build_2020-12-31_13-31-55/py_pubsub/stderr.log
  File "/home/yan/camps_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/csvtojpeg.py", line 8
    cv2_img = np.genfromtxt((cwd + '/timed/' + file'), delimiter=',')
                                                                 ^
SyntaxError: invalid syntax

